[gd_scene load_steps=10 format=3 uid="uid://chpykjknkkd46"]

[ext_resource type="Script" uid="uid://cpkoxmnnchh2s" path="res://characters/copter.gd" id="1_cxwn0"]
[ext_resource type="Texture2D" uid="uid://dsqwddkrn8anp" path="res://characters/copter.png" id="2_jo6hg"]
[ext_resource type="Texture2D" uid="uid://4qvmg8iwqvr8" path="res://characters/copter_gun.png" id="3_ooyyq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jo6hg"]
size = Vector2(30, 18)

[sub_resource type="Animation" id="Animation_8qjam"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CopterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_g026m"]
resource_name = "base_fly"
length = 0.2500125
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CopterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4vlb"]
_data = {
&"RESET": SubResource("Animation_8qjam"),
&"base_fly": SubResource("Animation_g026m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ooyyq"]
size = Vector2(30, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g026m"]
size = Vector2(38, 24)

[node name="Copter" type="CharacterBody2D" groups=["living"]]
collision_layer = 10
collision_mask = 128
script = ExtResource("1_cxwn0")
movement_speed = 100.0
health = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_jo6hg")

[node name="CopterSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_jo6hg")
hframes = 2

[node name="GunSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_ooyyq")
hframes = 3

[node name="FlyPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v4vlb")
}

[node name="OnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -1)
rect = Rect2(-100, -100, 200, 200)
show_rect = false

[node name="PlayerStandOn" type="CharacterBody2D" parent="."]
collision_layer = 256
collision_mask = 0
motion_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStandOn"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_ooyyq")
one_way_collision = true

[node name="PlayerOnMeSensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOnMeSensor"]
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_g026m")

[connection signal="screen_entered" from="OnScreenNotifier2D" to="." method="_on_screen_entered"]
[connection signal="body_entered" from="PlayerOnMeSensor" to="." method="_on_player_on_me_sensor_body_entered"]
[connection signal="body_exited" from="PlayerOnMeSensor" to="." method="_on_player_on_me_sensor_body_exited"]
